--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 asgiref==3.8.1
-cffi==1.16.0
-cryptography==42.0.8
+attrs==23.2.0
 Django==5.0.6
-greenlet==3.0.3
-pillow==10.4.0
-pycparser==2.22
-pyotp==2.9.0
-pypng==0.20220715.0
-qrcode==7.4.2
-SQLAlchemy==2.0.31
+djangorestframework==3.15.2
+drf-spectacular==0.27.2
+inflection==0.5.1
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+PyYAML==6.0.1
+referencing==0.35.1
+rpds-py==0.18.1
 sqlparse==0.5.0
-typing_extensions==4.12.2
+uritemplate==4.1.1
